Prevent resume page from overflowing

--- a/src/styles/foundation/app.css
+++ b/src/styles/foundation/app.css
@@ -9,6 +9,10 @@ body {
   overflow-y: hidden;
 }
 
+.Page {
+  overflow: hidden;
+}
+
 /* Was:
 .Section,.Screenshots,.ProjectsGrid,.Card
 But that makes fonts blurry...
